# EDU-Segmenter

./: README.md  args.txt  pyproject.toml
com/disrpt/segmenter/: bert_with_mlp_classifier.py  dataset_prep.py  fine_tune_with_linear_head.py  fine_tune_with_mlp.py
com/disrpt/segmenter/utils/: Helper.py  combined_dataset.py  data_downloader.py  data_preprocesser.py  lora_config.py  wandb_config.py
resources/: ALLOTHERMODELS_RUNNINGDISRPT.ipynb  Final4RUNNINGDISRPTWITHMLP.ipynb
